<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="126dp"
                android:layout_height="157dp"
                android:paddingBottom="10dp"
                android:src="@drawable/main_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:text="@string/app_desc"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="36dp"
                android:letterSpacing="0.03"
                android:text="@string/app_name"
                android:textColor="#68329b"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="236dp"
        android:layout_height="203dp"
        android:layout_gravity="center"
        android:background="@drawable/login" />

    <EditText
        android:id="@+id/signUpFullNameID"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/sign"
        android:hint="@string/signUpUserNameHint"
        android:paddingLeft="20dp" />

    <EditText
        android:id="@+id/signUpEmailID"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/sign"
        android:hint="@string/signUpUserEmailHint"
        android:paddingLeft="20dp" />

    <EditText
        android:id="@+id/signUpPasswordID"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/sign"
        android:hint="@string/signUpUserPasswordHint"
        android:paddingLeft="20dp" />

    <EditText
        android:id="@+id/signUpPasswordConfirmID"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/sign"
        android:hint="@string/signUpUserPasswordConfirmationHint"
        android:paddingLeft="20dp" />

    <Button
        android:id="@+id/signUpButtonID"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:text="@string/btnSignUp"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/signUpOpenSignInID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/openSignInActivity"
        android:textColor="#68329b" />

</LinearLayout>